# bevy_bladeink

./: Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: example.ink
assets/ink/: bindings.ink  bindings.ink.json
bevy_bladeink/: Cargo.toml
bevy_bladeink/assets/ink/: bindings.ink  bindings.ink.json
bevy_bladeink/examples/: basic.rs  bindings.rs  style_ui.rs
bevy_bladeink/src/: events.rs  lib.rs  plugin.rs  prelude.rs
bevy_bladeink/src/assets/: story_json.rs
bevy_bladeink/src/commands/: load_state.rs  reset_state.rs
bevy_bladeink/src/components/: ink_path.rs  mod.rs
bevy_bladeink/src/ink/: bindings.rs  choice.rs  ink_value.rs  mod.rs  story.rs
bevy_bladeink/src/resources/: ink_variables.rs
bevy_bladeink/src/systems/: mod.rs
bevy_bladeink/src/ui/: components.rs  mod.rs  plugin.rs  systems.rs
bevy_bladeink/tests/: derive_tests.rs
bevy_bladeink_derive/: Cargo.toml
bevy_bladeink_derive/src/: lib.rs
examples/: basic.rs  bindings.rs
src/: events.rs  lib.rs  plugin.rs  prelude.rs
src/assets/: mod.rs  story_json.rs
src/commands/: begin_sequence.rs  continue_sequence.rs  load_state.rs  mod.rs  reset_state.rs  select_choice.rs  set_variable.rs  track_variable.rs
src/ink/: bindings.rs  choice.rs  error.rs  ink_value.rs  mod.rs  state.rs
src/resources/: ink_asset_ready.rs  ink_story.rs  ink_variables.rs  mod.rs
src/systems/: ink_story.rs  mod.rs  state.rs  story.rs
src/ui/: components.rs  events.rs  plugin.rs
