[package]
name = "bevy_bladeink"
version = "0.1.0"
edition = "2024"
authors = ["syynth.dev"]
readme = "README.md"
keywords = ["bevy", "bladeink", "ink", "gamedev", "story"]

[dependencies]
bevy = { version = "0.17", default-features = false }
bevy_crossbeam_event = "0.9"

thiserror = "2"
bladeink = "1"

[features]
default = ["bevy/bevy_asset", "bevy/bevy_log"]
ui = ["bevy/bevy_ui"]
dev = ["bevy/file_watcher"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
needless_lifetimes = "allow"
too_many_arguments = "allow"
nonstandard_macro_braces = "warn"
print_stdout = "warn"
print_stderr = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

# see: https://github.com/bevyengine/bevy/pull/15375#issuecomment-2366966219
too_long_first_doc_paragraph = "allow"

alloc_instead_of_core = "warn"

allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)', 'cfg(bevy_lint)'] }
