[package]
name = "bevy_bladeink"
version = "0.1.0"
edition = "2024"
authors = ["syynth.dev"]
readme = "README.md"
keywords = ["bevy", "bladeink", "ink", "gamedev", "story"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_asset"] }
bevy_crossbeam_event = "0.9"

thiserror = "2"
bladeink = "1"

[dev-dependencies]
bevy = { version = "0.17", default-features = true }

[features]
default = ["bevy/bevy_log", "bevy/bevy_asset", "ui"]
ui = ["bevy/bevy_ui"]
dev = ["bevy/file_watcher", "debug_log"]
debug_log = []

[[example]]
name = "basic"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.clippy]
too_many_arguments = "allow"
# see: https://github.com/bevyengine/bevy/pull/15375#issuecomment-2366966219
too_long_first_doc_paragraph = "allow"
type_complexity = "allow"

alloc_instead_of_core = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
nonstandard_macro_braces = "warn"
print_stdout = "warn"
print_stderr = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
semicolon_if_nothing_returned = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
ref_as_ptr = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)', 'cfg(bevy_lint)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"
