[package]
name = "bevy_bladeink"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["bevy", "bladeink", "ink", "gamedev", "story"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_asset"] }
bevy_crossbeam_event = "0.9"
bevy_bladeink_derive = { path = "../bevy_bladeink_derive", version = "0.1.0" }

thiserror = "2"
bladeink = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
bevy = { version = "0.17", default-features = true }

[features]
default = ["bevy/bevy_log", "bevy/bevy_asset", "ui"]
ui = ["bevy/bevy_ui"]
dev = ["bevy/file_watcher", "debug_log"]
debug_log = []

[[example]]
name = "basic"

[[example]]
name = "style_ui"
required-features = ["ui", "debug_log"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
